--- a/src/teacherDashboard/ScheduleList.module.css
+++ b/src/teacherDashboard/ScheduleList.module.css
@@ -1,5 +1,5 @@
 .outer {
-  width: 333px;
+  width: 324px;
   height: fit-content;
   padding: 25px 1px;
   padding-top: 27px;
